[package]
name = "cors-auth-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
rusqlite = { version = "0.26", features = ["chrono"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
chrono = "0.4"
clap = "3.0"
dotenv = "0.15"
log = "0.4.22"
env_logger = "0.11.5"
